--- a/css/main.css
+++ b/css/main.css
@@ -74,3 +74,27 @@ body {
   color: #333;
   background-color: #f9f9f9;
 }
+
+section {
+  margin: auto;
+  margin-top: 20px;
+  width: 80%;
+  padding-left: 20px;
+}
+
+section h1 {
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin-bottom: 10px;
+  margin-left: -20px;
+}
+
+section h2 {
+  font-size: 1rem;
+  font-weight: 600;
+  margin-top: 10px;
+}
+
+em {
+  font-weight: 600;
+}
